Package_Tools/glib/Package_Tools/pas_units/glib/gvariant.pas


function g_variant_parser_get_error_quark: TGQuark; cdecl; external libgio2;
function g_variant_parse_error_quark: TGQuark; cdecl; external libgio2;
{#define G_VARIANT_BUILDER_INIT(variant_type)                                          \ }
{                                                                                     \ }
{                                                                                     \ }
{                                                                                     \ }
{        2942751021u /* == GVSB_MAGIC_PARTIAL, see gvariant.c */, variant_type,  0,  \ }
{                                                                                     \ }
{                                                                                     \ }
{   }
function g_variant_builder_new(_type: PGVariantType): PGVariantBuilder; cdecl; external libgio2;
procedure g_variant_builder_unref(builder: PGVariantBuilder); cdecl; external libgio2;
function g_variant_builder_ref(builder: PGVariantBuilder): PGVariantBuilder; cdecl; external libgio2;
procedure g_variant_builder_init(builder: PGVariantBuilder; _type: PGVariantType); cdecl; external libgio2;
function g_variant_builder_end(builder: PGVariantBuilder): PGVariant; cdecl; external libgio2;
procedure g_variant_builder_clear(builder: PGVariantBuilder); cdecl; external libgio2;
procedure g_variant_builder_open(builder: PGVariantBuilder; _type: PGVariantType); cdecl; external libgio2;
procedure g_variant_builder_close(builder: PGVariantBuilder); cdecl; external libgio2;
procedure g_variant_builder_add_value(builder: PGVariantBuilder; Value: PGVariant); cdecl; external libgio2;
procedure g_variant_builder_add(builder: PGVariantBuilder; format_string: Pgchar; args: array of const); cdecl; external libgio2;
procedure g_variant_builder_add(builder: PGVariantBuilder; format_string: Pgchar); cdecl; external libgio2;
procedure g_variant_builder_add_parsed(builder: PGVariantBuilder; format: Pgchar; args: array of const); cdecl; external libgio2;
procedure g_variant_builder_add_parsed(builder: PGVariantBuilder; format: Pgchar); cdecl; external libgio2;
function g_variant_new(format_string: Pgchar; args: array of const): PGVariant; cdecl; external libgio2;
function g_variant_new(format_string: Pgchar): PGVariant; cdecl; external libgio2;
procedure g_variant_get(Value: PGVariant; format_string: Pgchar; args: array of const); cdecl; external libgio2;
procedure g_variant_get(Value: PGVariant; format_string: Pgchar); cdecl; external libgio2;
function g_variant_new_va(format_string: Pgchar; endptr: PPgchar; app: Pva_list): PGVariant; cdecl; external libgio2;
procedure g_variant_get_va(Value: PGVariant; format_string: Pgchar; endptr: PPgchar; app: Pva_list); cdecl; external libgio2;
function g_variant_check_format_string(Value: PGVariant; format_string: Pgchar; copy_only: Tgboolean): Tgboolean; cdecl; external libgio2;
function g_variant_parse(_type: PGVariantType; Text: Pgchar; limit: Pgchar; endptr: PPgchar; error: PPGError): PGVariant; cdecl; external libgio2;
function g_variant_new_parsed(format: Pgchar; args: array of const): PGVariant; cdecl; external libgio2;
function g_variant_new_parsed(format: Pgchar): PGVariant; cdecl; external libgio2;
function g_variant_new_parsed_va(format: Pgchar; app: Pva_list): PGVariant; cdecl; external libgio2;
function g_variant_parse_error_print_context(error: PGError; source_str: Pgchar): Pgchar; cdecl; external libgio2;
function g_variant_compare(one: Tgconstpointer; two: Tgconstpointer): Tgint; cdecl; external libgio2;

type
  {< private > }
  PGVariantDict = ^TGVariantDict;

  TGVariantDict = record
    u: record
      case longint of
        0: (s: record
            asv: PGVariant;
            partial_magic: Tgsize;
            y: array[0..13] of Tguintptr;
            end);
        1: (x: array[0..15] of Tguintptr);
      end;
  end;

{*
 * G_VARIANT_DICT_INIT:
 * @asv: (nullable): a GVariant*
 *
 * A stack-allocated #GVariantDict must be initialized if it is used
 * together with g_auto() to avoid warnings or crashes if function
 * returns before g_variant_dict_init() is called on the builder.
 *
 * This macro can be used as initializer instead of an explicit
 * zeroing a variable when declaring it and a following
 * g_variant_dict_init(), but it cannot be assigned to a variable.
 *
 * The passed @asv has to live long enough for #GVariantDict to gather
 * the entries from, as the gathering does not happen in the
 * G_VARIANT_DICT_INIT() call, but rather in functions that make sure
 * that #GVariantDict is valid.  In context where the initialization
 * value has to be a constant expression, the only possible value of
 * @asv is %NULL.  It is still possible to call g_variant_dict_init()
 * safely with a different @asv right after the variable was
 * initialized with G_VARIANT_DICT_INIT().
 *
 * |[<!-- language="C" -->
 *   g_autoptr(GVariant) variant = get_asv_variant ();
 *   g_auto(GVariantDict) dict = G_VARIANT_DICT_INIT (variant);
 * ]|
 *
 * Since: 2.50
  }
  {#define G_VARIANT_DICT_INIT(asv)                                             \ }
  {                                                                            \ }
  {                                                                            \ }
  {                                                                            \ }
  {        asv, 3488698669u /* == GVSD_MAGIC_PARTIAL, see gvariant.c */,  0,  \ }
  {                                                                            \ }
  {                                                                            \ }
  {   }

function g_variant_dict_new(from_asv: PGVariant): PGVariantDict; cdecl; external libgio2;
procedure g_variant_dict_init(dict: PGVariantDict; from_asv: PGVariant); cdecl; external libgio2;
function g_variant_dict_lookup(dict: PGVariantDict; key: Pgchar; format_string: Pgchar; args: array of const): Tgboolean; cdecl; external libgio2;
function g_variant_dict_lookup(dict: PGVariantDict; key: Pgchar; format_string: Pgchar): Tgboolean; cdecl; external libgio2;
function g_variant_dict_lookup_value(dict: PGVariantDict; key: Pgchar; expected_type: PGVariantType): PGVariant; cdecl; external libgio2;
function g_variant_dict_contains(dict: PGVariantDict; key: Pgchar): Tgboolean; cdecl; external libgio2;
procedure g_variant_dict_insert(dict: PGVariantDict; key: Pgchar; format_string: Pgchar; args: array of const); cdecl; external libgio2;
procedure g_variant_dict_insert(dict: PGVariantDict; key: Pgchar; format_string: Pgchar); cdecl; external libgio2;
procedure g_variant_dict_insert_value(dict: PGVariantDict; key: Pgchar; Value: PGVariant); cdecl; external libgio2;
function g_variant_dict_remove(dict: PGVariantDict; key: Pgchar): Tgboolean; cdecl; external libgio2;
procedure g_variant_dict_clear(dict: PGVariantDict); cdecl; external libgio2;
function g_variant_dict_end(dict: PGVariantDict): PGVariant; cdecl; external libgio2;
function g_variant_dict_ref(dict: PGVariantDict): PGVariantDict; cdecl; external libgio2;
procedure g_variant_dict_unref(dict: PGVariantDict); cdecl; external libgio2;

// === Konventiert am: 6-8-24 15:38:31 ===


implementation


{ was #define dname def_expr }
function G_VARIANT_PARSE_ERROR: longint; { return type might be wrong }
begin
  G_VARIANT_PARSE_ERROR := g_variant_parse_error_quark;
end;


end.
